# llxprt-luther

./: .coderabbit.yaml  .gitignore  README.md  pr-remediation-result.json
workflow/: .coderabbit.yaml  .gitignore  Cargo.toml  Makefile  README.md
workflow/.cargo/: config.toml
workflow/.github/workflows/: ocr-pr-review.yml  pr-quality.yml  release.yml
workflow/.llxprt/: LLXPRT.md
workflow/config/workflow-configs/: codepuppy.toml  llxprt-code.toml  llxprt-jefe.toml  llxprt-luther.toml  parent-orchestrator-code.toml
workflow/config/workflows/: llxprt-issue-fix-v1.toml  llxprt-luther-dogfood-v1.toml  parent-issue-orchestrator-v1.toml
workflow/dev-docs/: COORDINATING.md  PLAN-TEMPLATE.md  PLAN.md  RUST-RULES.md  engine.md  goodtests.md  workflow.md
workflow/docs/architecture/: pr-follow-through.md  service-system-and-foreground-manager.md
workflow/docs/guides/: daemon-mode.md  local-ocr-review.md
workflow/docs/project/: mvp-workflow-design.md  rust-build-quality-release-system.md
workflow/project-plans/: roadmap-after-self-hosting.md
workflow/project-plans/coderabbit/: execution-tracker.md  implementation-plan.md
workflow/project-plans/initial/: execution-tracker.md  overview.md  (+3 more)
workflow/src/: lib.rs  main.rs  polling.rs  runtime_paths.rs
workflow/tests/: canary_harness_tests.rs  capsule_wiring_integration_tests.rs  change_detection_tests.rs  cli_config_resolution_integration.rs  cli_e2e_integration.rs  command_manifest_config_tests.rs  command_manifest_executor_tests.rs  config_binding_integration.rs  config_binding_json_parity_integration.rs  continuation_integration.rs  cross_head_binding_classification_tests.rs  daemon_discovery_integration.rs  daemon_lifecycle_integration.rs  daemon_queue_integration.rs  daemon_scheduler_integration.rs  e2e_workflow_integration.rs  effect_intents_integration_tests.rs  engine_execution_integration.rs  engine_integration_llxprt_first.rs  engine_resume_integration.rs  epoch_operations_attempts_integration_tests.rs  execution_capsule_integration_tests.rs  executor_unit_tests.rs  github_api_contract_tests.rs  github_pr_followup_executor_tests.rs  github_preflight_tests.rs  hello_world_workflow_integration.rs  launch_capsule_atomic_tests.rs  legacy_ownership_migration_integration.rs  live_workflow_integration.rs  llxprt_preflight_tests.rs  monitor_integration.rs  monitor_service_integration.rs  monitor_singleton_and_restart_integration.rs  monitor_supervision_integration.rs  namespaced_context_tests.rs  no_include_stitching_tests.rs  p15_migration_deprecation_integration_tests.rs  per_edge_loop_tests.rs  persistence_integration.rs  (+25 more)
(+797 files in other folders)
