[workspace]
members = ["xtask"]
resolver = "2"

[package]
name = "luther-workflow"
version = "0.1.0"
edition = "2021"
description = "Luther workflow runtime and supervision system"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = "0.4"
regex = "1.11"
clap = { version = "4", features = ["derive"] }
dagrs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rusqlite = { version = "0.34", features = ["bundled", "chrono", "uuid"] }
directories = "5"
dirs = "5"

[dev-dependencies]
rstest = "0.25"
tempfile = "3"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = "warn"
nursery = "warn"
cognitive_complexity = "warn"

[profile.dev]
incremental = false

[profile.test]
incremental = false
