[workspace]
members = ["xtask"]
resolver = "2"

[package]
name = "luther-workflow"
version = "0.1.0"
edition = "2021"
description = "Luther workflow runtime and supervision system"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal", "sync", "time", "fs", "io-util", "net"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rusqlite = { version = "0.34", features = ["bundled", "chrono", "uuid"] }
directories = "5"
dirs = "5"
libc = "0.2"
rustix = { version = "1.1.4", features = ["fs", "process"] }
sha2 = "0.10"

[dev-dependencies]
rstest = "0.25"
tempfile = "3"

# Stage 1 lint policy: keep high-signal warnings visible for new code and
# preserve the current CI quality gates in Cargo.toml. Later stages can expand
# selected pedantic lints and split legacy orchestration hotspots.
[lints.rust]
unsafe_code = "warn"

[lints.clippy]
cognitive_complexity = "deny"
too_many_lines = "deny"
too_many_arguments = "deny"
type_complexity = "deny"
struct_excessive_bools = "deny"

[profile.dev]
incremental = false

[profile.test]
incremental = false
